--- a/notebooks/EDA_texts_absa.ipynb
+++ b/notebooks/EDA_texts_absa.ipynb
@@ -10,13 +10,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-24T18:49:50.372364Z",
-     "start_time": "2024-07-24T18:49:47.039277Z"
+     "end_time": "2024-07-24T20:32:55.225490Z",
+     "start_time": "2024-07-24T20:32:55.222771Z"
     }
    },
    "id": "ec96fda506411cab",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -24,42 +24,38 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-24T18:49:51.497170Z",
-     "start_time": "2024-07-24T18:49:50.373450Z"
+     "end_time": "2024-07-24T20:32:55.696356Z",
+     "start_time": "2024-07-24T20:32:55.693991Z"
     }
    },
    "source": [
     "from config.config import *"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 9
   },
   {
    "cell_type": "code",
-   "source": [
-    "absa_annotated = pd.read_pickle(os.path.join(OBTAINED_DATA, 'absa_aspects_categories_polarities.pkl'))"
-   ],
+   "source": "texts_absa = pd.read_pickle(os.path.join(OBTAINED_DATA, 'texts_absa.pkl'))",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-24T18:49:53.776833Z",
-     "start_time": "2024-07-24T18:49:53.770791Z"
+     "end_time": "2024-07-24T20:32:56.098525Z",
+     "start_time": "2024-07-24T20:32:56.093657Z"
     }
    },
    "id": "d642e80430089a66",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 10
   },
   {
    "cell_type": "code",
-   "source": [
-    "absa_annotated.head()"
-   ],
+   "source": "texts_absa.head()",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-24T18:49:54.680052Z",
-     "start_time": "2024-07-24T18:49:54.666931Z"
+     "end_time": "2024-07-24T20:32:56.572660Z",
+     "start_time": "2024-07-24T20:32:56.566270Z"
     }
    },
    "id": "c6df24a81032b3e1",
@@ -69,8 +65,8 @@
       "text/plain": [
        "                                                text  \\\n",
        "0  The solution given here is fantastic and a bit...   \n",
-       "1  Ahh I wish I had never gotten this stupid key,...   \n",
-       "2  I loved this book so much I couldn't stop read...   \n",
+       "1  Ahh [SEP] I wish I had never gotten this stupi...   \n",
+       "2  I loved this book so much [SEP] I couldn't sto...   \n",
        "3  This book is very informative, describing in d...   \n",
        "4  I recommend that anyone looking to have some m...   \n",
        "\n",
@@ -130,14 +126,14 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Ahh I wish I had never gotten this stupid key,...</td>\n",
+       "      <td>Ahh [SEP] I wish I had never gotten this stupi...</td>\n",
        "      <td>[Arthur, Mister Monday, Arthur, Mister Monday,...</td>\n",
        "      <td>[CONTENT#CHARACTERS, BOOK#TITLE, CONTENT#CHARA...</td>\n",
        "      <td>[neutral, neutral, neutral, negative, neutral,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>I loved this book so much I couldn't stop read...</td>\n",
+       "      <td>I loved this book so much [SEP] I couldn't sto...</td>\n",
        "      <td>[book, twins]</td>\n",
        "      <td>[BOOK#GENERAL, CONTENT#PLOT]</td>\n",
        "      <td>[positive, positive]</td>\n",
@@ -161,23 +157,21 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 11
   },
   {
    "cell_type": "code",
-   "source": [
-    "absa_annotated.info()"
-   ],
+   "source": "texts_absa.info()",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-24T18:49:55.282645Z",
-     "start_time": "2024-07-24T18:49:55.275365Z"
+     "end_time": "2024-07-24T20:32:57.279602Z",
+     "start_time": "2024-07-24T20:32:57.274417Z"
     }
    },
    "id": "4d7e959540f9d2b5",
@@ -200,43 +194,173 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 12
   },
   {
    "cell_type": "code",
+   "source": "texts_absa[['text', 'targets', 'polarities']]",
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-24T20:32:58.483129Z",
+     "start_time": "2024-07-24T20:32:58.470580Z"
+    }
+   },
+   "id": "c886dadfeb0216e5",
    "outputs": [
     {
      "data": {
-      "text/plain": "                                                  text  \\\n0    The solution given here is fantastic and a bit...   \n1    Ahh I wish I had never gotten this stupid key,...   \n2    I loved this book so much I couldn't stop read...   \n3    This book is very informative, describing in d...   \n4    I recommend that anyone looking to have some m...   \n..                                                 ...   \n290  I have read and used this book many, many time...   \n291  Full of atmosphere, world war II feel to it He...   \n292  I didn't like it AS much as some of the other ...   \n293  Can Arthur save the world with the key as a yo...   \n294  Best of the Best From the award-winning author...   \n\n                                               targets  \\\n0                                               [book]   \n1    [Arthur, Mister Monday, Arthur, Mister Monday,...   \n2                                        [book, twins]   \n3                           [book, beadwork, loomwork]   \n4    [the Budapest, $5, The Budapest, Boryk, book, ...   \n..                                                 ...   \n290  [book, book, children, Native American beadwor...   \n291  [world war II, Churchill, novel, historical te...   \n292  [Marshall, read, protagonist, \"happy\" person, ...   \n293  [Arthur, Arthur, key, asthma problems, asthma ...   \n294       [author, suicide, cancer, fortuitous events]   \n\n                                            polarities  \n0                                           [positive]  \n1    [neutral, neutral, neutral, negative, neutral,...  \n2                                 [positive, positive]  \n3                         [positive, neutral, neutral]  \n4    [neutral, positive, neutral, neutral, positive...  \n..                                                 ...  \n290            [positive, positive, positive, neutral]  \n291            [positive, positive, neutral, negative]  \n292  [neutral, positive, negative, negative, neutra...  \n293  [neutral, neutral, neutral, neutral, neutral, ...  \n294              [positive, neutral, neutral, neutral]  \n\n[295 rows x 3 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>text</th>\n      <th>targets</th>\n      <th>polarities</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>The solution given here is fantastic and a bit...</td>\n      <td>[book]</td>\n      <td>[positive]</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Ahh I wish I had never gotten this stupid key,...</td>\n      <td>[Arthur, Mister Monday, Arthur, Mister Monday,...</td>\n      <td>[neutral, neutral, neutral, negative, neutral,...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>I loved this book so much I couldn't stop read...</td>\n      <td>[book, twins]</td>\n      <td>[positive, positive]</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>This book is very informative, describing in d...</td>\n      <td>[book, beadwork, loomwork]</td>\n      <td>[positive, neutral, neutral]</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>I recommend that anyone looking to have some m...</td>\n      <td>[the Budapest, $5, The Budapest, Boryk, book, ...</td>\n      <td>[neutral, positive, neutral, neutral, positive...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>290</th>\n      <td>I have read and used this book many, many time...</td>\n      <td>[book, book, children, Native American beadwor...</td>\n      <td>[positive, positive, positive, neutral]</td>\n    </tr>\n    <tr>\n      <th>291</th>\n      <td>Full of atmosphere, world war II feel to it He...</td>\n      <td>[world war II, Churchill, novel, historical te...</td>\n      <td>[positive, positive, neutral, negative]</td>\n    </tr>\n    <tr>\n      <th>292</th>\n      <td>I didn't like it AS much as some of the other ...</td>\n      <td>[Marshall, read, protagonist, \"happy\" person, ...</td>\n      <td>[neutral, positive, negative, negative, neutra...</td>\n    </tr>\n    <tr>\n      <th>293</th>\n      <td>Can Arthur save the world with the key as a yo...</td>\n      <td>[Arthur, Arthur, key, asthma problems, asthma ...</td>\n      <td>[neutral, neutral, neutral, neutral, neutral, ...</td>\n    </tr>\n    <tr>\n      <th>294</th>\n      <td>Best of the Best From the award-winning author...</td>\n      <td>[author, suicide, cancer, fortuitous events]</td>\n      <td>[positive, neutral, neutral, neutral]</td>\n    </tr>\n  </tbody>\n</table>\n<p>295 rows × 3 columns</p>\n</div>"
+      "text/plain": [
+       "                                                  text  \\\n",
+       "0    The solution given here is fantastic and a bit...   \n",
+       "1    Ahh [SEP] I wish I had never gotten this stupi...   \n",
+       "2    I loved this book so much [SEP] I couldn't sto...   \n",
+       "3    This book is very informative, describing in d...   \n",
+       "4    I recommend that anyone looking to have some m...   \n",
+       "..                                                 ...   \n",
+       "290  I have read and used this book many, many time...   \n",
+       "291  Full of atmosphere, world war II feel to it [S...   \n",
+       "292  I didn't like it AS much as some of the other ...   \n",
+       "293  Can Arthur save the world with the key as a yo...   \n",
+       "294  Best of the Best [SEP] From the award-winning ...   \n",
+       "\n",
+       "                                               targets  \\\n",
+       "0                                               [book]   \n",
+       "1    [Arthur, Mister Monday, Arthur, Mister Monday,...   \n",
+       "2                                        [book, twins]   \n",
+       "3                           [book, beadwork, loomwork]   \n",
+       "4    [the Budapest, $5, The Budapest, Boryk, book, ...   \n",
+       "..                                                 ...   \n",
+       "290  [book, book, children, Native American beadwor...   \n",
+       "291  [world war II, Churchill, novel, historical te...   \n",
+       "292  [Marshall, read, protagonist, \"happy\" person, ...   \n",
+       "293  [Arthur, Arthur, key, asthma problems, asthma ...   \n",
+       "294       [author, suicide, cancer, fortuitous events]   \n",
+       "\n",
+       "                                            polarities  \n",
+       "0                                           [positive]  \n",
+       "1    [neutral, neutral, neutral, negative, neutral,...  \n",
+       "2                                 [positive, positive]  \n",
+       "3                         [positive, neutral, neutral]  \n",
+       "4    [neutral, positive, neutral, neutral, positive...  \n",
+       "..                                                 ...  \n",
+       "290            [positive, positive, positive, neutral]  \n",
+       "291            [positive, positive, neutral, negative]  \n",
+       "292  [neutral, positive, negative, negative, neutra...  \n",
+       "293  [neutral, neutral, neutral, neutral, neutral, ...  \n",
+       "294              [positive, neutral, neutral, neutral]  \n",
+       "\n",
+       "[295 rows x 3 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>targets</th>\n",
+       "      <th>polarities</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The solution given here is fantastic and a bit...</td>\n",
+       "      <td>[book]</td>\n",
+       "      <td>[positive]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ahh [SEP] I wish I had never gotten this stupi...</td>\n",
+       "      <td>[Arthur, Mister Monday, Arthur, Mister Monday,...</td>\n",
+       "      <td>[neutral, neutral, neutral, negative, neutral,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I loved this book so much [SEP] I couldn't sto...</td>\n",
+       "      <td>[book, twins]</td>\n",
+       "      <td>[positive, positive]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>This book is very informative, describing in d...</td>\n",
+       "      <td>[book, beadwork, loomwork]</td>\n",
+       "      <td>[positive, neutral, neutral]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I recommend that anyone looking to have some m...</td>\n",
+       "      <td>[the Budapest, $5, The Budapest, Boryk, book, ...</td>\n",
+       "      <td>[neutral, positive, neutral, neutral, positive...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>290</th>\n",
+       "      <td>I have read and used this book many, many time...</td>\n",
+       "      <td>[book, book, children, Native American beadwor...</td>\n",
+       "      <td>[positive, positive, positive, neutral]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>291</th>\n",
+       "      <td>Full of atmosphere, world war II feel to it [S...</td>\n",
+       "      <td>[world war II, Churchill, novel, historical te...</td>\n",
+       "      <td>[positive, positive, neutral, negative]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>I didn't like it AS much as some of the other ...</td>\n",
+       "      <td>[Marshall, read, protagonist, \"happy\" person, ...</td>\n",
+       "      <td>[neutral, positive, negative, negative, neutra...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>293</th>\n",
+       "      <td>Can Arthur save the world with the key as a yo...</td>\n",
+       "      <td>[Arthur, Arthur, key, asthma problems, asthma ...</td>\n",
+       "      <td>[neutral, neutral, neutral, neutral, neutral, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>294</th>\n",
+       "      <td>Best of the Best [SEP] From the award-winning ...</td>\n",
+       "      <td>[author, suicide, cancer, fortuitous events]</td>\n",
+       "      <td>[positive, neutral, neutral, neutral]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>295 rows × 3 columns</p>\n",
+       "</div>"
+      ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "absa_annotated[['text', 'targets', 'polarities']]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-07-19T12:00:16.787946Z",
-     "start_time": "2024-07-19T12:00:16.776924Z"
-    }
-   },
-   "id": "c886dadfeb0216e5",
-   "execution_count": 5
+   "execution_count": 13
   },
   {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1228dcea9c0050f8",
-   "execution_count": null
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Like this book because it is just like my life in a lot of was [SEP] For one I'm a teenage and have a baby [SEP] This book teach me in a lot of way [SEP] Out of all the books I read this is the best [SEP] My darling,My hamburger is a good book if it didn't live you hang at the end what hope to whom and did they  go to collage or not",
+   "id": "883b2e521cac0486"
   },
   {
    "cell_type": "code",
